--- a/css/main.css
+++ b/css/main.css
@@ -18,7 +18,8 @@ div{
 
 header{
     background: url(../img/first-bg.jpg) no-repeat center top / cover;
-    padding-bottom: 160px;
+    /*padding-bottom: 160px;*/
+    height: 100vh;
 }
 
 .container{
