--- a/css/main.css
+++ b/css/main.css
@@ -20,6 +20,7 @@ header{
     background: url(../img/first-bg.jpg) no-repeat center top / cover;
     /*padding-bottom: 160px;*/
     height: 100vh;
+    width: 100%;
 }
 
 .container{
