--- a/css/main.css
+++ b/css/main.css
@@ -1,214 +1,343 @@
-body{
-    font-family: Arial, Helvetica, sans-serif;
-    padding: o;
-    margin: 0;
+@font-face {
+    font-family: 'Jaapokkisubtract';
+    src: url('../fonts/JaapokkisubtractRegular.eot'); /* IE9 Compat Modes */
+    src: url('../fonts/JaapokkisubtractRegular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+    url('../fonts/JaapokkisubtractRegular.woff2') format('woff2'), /* Super Modern Browsers */
+    url('../fonts/JaapokkisubtractRegular.woff') format('woff'), /* Pretty Modern Browsers */
+    url('../fonts/JaapokkisubtractRegular.ttf')  format('truetype'), /* Safari, Android, iOS */
+    url('../fonts/JaapokkisubtractRegular#svgFontName') format('svg'); /* Legacy iOS */
 }
 
-.clearfix:after{
-    content: '';
-    display: table;
-    width: 100%;
-    clear: both;
-    overflow: auto;
+body {
+    font-family: 'Roboto', sans-serif;
+    font-size: 12px;
+    color: #0001c5;
+    letter-spacing: 0.06em;
 }
 
-div{
+div, p, span, a, input, button{
     box-sizing: border-box;
 }
 
-header{
-    background: url(../img/first-bg.jpg) no-repeat center top / cover;
-    /*padding-bottom: 160px;*/
-    height: 100vh;
-    width: 100%;
+p{
+    line-height: 1.7em;
+}
+
+.jpk-font{
+    font-family: 'Jaapokkisubtract', sans-serif;
+}
+h1, h, h3, h4, h5, h6{
+    font-family: 'Jaapokkisubtract', sans-serif;
+    letter-spacing: 0.14em;
+    font-weight: normal;
+    line-height: 1.22em;
+}
+
+h2{
+    letter-spacing: 0.04em;
+    margin: 0;
+}
+
+h3{
+    letter-spacing: 0.03em;
 }
 
 .container{
-    width: 930px;
-    margin: 0 auto;
+    margin: 0 7%;
+    position: relative;
+}
+
+.btn{
+    font-family: 'Jaapokkisubtract', sans-serif;
+    font-size: 20px;
+    color: #fff;
+    background: transparent;
+    border: 3px solid #fff;
+    cursor: pointer;
+    padding: 17px 0;
+    width: 217px;
+    transition: all 0.3s ease;
+}
+
+.btn:hover{
+    color: #0001c5;
+    background: #fff;
+}
+
+.header{
+    background: #0406bd url(../img/first_bg.jpg) no-repeat center bottom / cover;
+    color: #ffffff;
+    height: 100vh;
+    box-shadow: 0 50px 200px rgba(33,48,99,0.5);
+}
+
+.header .container{
+    height: 100vh;
 }
 
 .logo{
-    margin-top: 41px;
-    float: left;
+    width: 48px;
+    height: 48px;
+    background: #ffffff;
+    color: #0000a0;
+    font-size: 25px;
+    text-transform: uppercase;
+    text-align: center;
+    line-height: 48px;
+    display: block;
+    text-decoration: none;
+    transition: all 0.3s ease;
+    position: absolute;
+    top: 8%;
 }
 
-nav{
+.logo:hover{
+    border-radius: 8px;
+}
+
+.brah{
+    background: #fff;
+    font-size: 18px;
+    color: #0304b9;
+    height: 184px;
+    width: 42px;
+    padding: 10px 15px;
+    position: absolute;
+    left: 61%;
+    top: 0;
+    line-height: 1.5em;
+}
+
+.hamburger{
+    width: 40px;
+    position: absolute;
+    top: 8%;
+    right: 0;
+    cursor: pointer;
+}
+
+.hamburger span{
+    background: #fff;
+    display: block;
+    height: 2px;
+    margin-bottom: 6px;
     float: right;
+    width: 100%;
+}
+
+.hamburger span:nth-child(1){
+    background: red;
+}
+
+.hamburger span:nth-child(2){
+    width: 75%;
+}
+
+.hamburger span:nth-child(3){
+    width: 50%;
+}
+
+.hamburger:hover span{
+    float: left;
+    background: red;
+}
+
+.offer{
+    position: absolute;
+    top: 50%;
+    left: 0;
+    margin-top: -250px;
+}
+
+.offer__bg{
+    font-size: 300px;
+    color: #1b1cc4;
+    position: absolute;
+}
+
+.offer__title{
+    font-size: 55px;
+    position: relative;
+    width: 561px;
+    margin-top: 110px;
+    margin-left: 134px;
+}
+
+.offer__title:after{
+    content: '';
+    display: block;
+    background: #fff;
+    width: 29px;
+    height: 5px;
+    position: absolute;
+    right: 180px;
+    top: -20px;
+}
+
+.offer__text{
+    font-size: 17px;
+    width: 337px;
+    margin-top: 40px;
+    margin-left: 226px;
+}
+
+.offer__btn{
+    margin-left: 350px;
     margin-top: 45px;
 }
 
-.menu{
-    padding: 0;
-    margin: 0;
-    display: block;
+.next{
+    font-size: 300px;
+    width: 433px;
+    position: absolute;
+    left: 65%;
+    top: 50%;
+    margin-top: -190px;
+    line-height: 0;
+    text-shadow: 15px 15px 0 #02039c;
 }
 
-.menu li{
-    float: left;
-    display: block;
-    margin-right: 41px;
+.next span{
+    margin-right: -70px;
+    line-height: 0.7em;
 }
 
-.menu a{
-     color: #ffffff;
-     text-decoration: none;
-     text-transform: uppercase;
-     font-size: 14px;
- }
+.next span:nth-child(2){
+    color: #0048ff;
+}
 
-.titles__first{
-     font-size: 40px;
-     color: #ffffff;
-     text-transform: uppercase;
-     text-align: center; 
-     margin-top: 180px;
- }
+.scroll{
+    display: block;
+    font-size: 22px;
+    border-right: 3px solid #fff;
+    height: 135px;
+    padding-right: 40px;
+    padding-top: 20px;
+    color: #fff;
+    text-decoration: none;
+    width: 100px;
+    position: absolute;
+    right: 5%;
+    bottom: 0;
+    transition: all 0.3s ease;
+}
 
-h1{
-     font-size: 75px; 
-     color: #ffffff;
-     text-transform: uppercase;
-     text-align: center;
-     margin: 15px;
- }
-
-.button{
-     background: gold;
-     color: grey;
-     border-radius: 3px;
-     display: block;
-     width: 240px;
-     padding: 20px 0;
-     margin: 0 auto;
-     text-decoration:  none;
-     text-align: center;
-     text-transform: uppercase;
-     font-weight: bold;
-     font-size: 18px;
-     margin-top: 50px;
- }
-
-.title{
-    padding-top: 150px;
- }
-
-.title h2{
-    font-size: 40px;
-    font-weight: bold;
-    text-align: center;
-    text-transform: uppercase;
-    margin: 0;
- }
-
-.title p{
-    color: #777777;
-    text-align: center;
-    font-size: 16px;
-    margin-top: 5px;
- }
+.scroll:hover{
+    background: #fff;
+    color: #0000a0;
+}
 
 .services{
-    margin-top: 50px;
- }
-
-.services__item{
-     width: 270px;
-     float: left;
-     text-align: center;
- }
-
-.services__item h3{
-     font-size: 18px;
-     margin-bottom: 5px;
- }
-
-.services__item p{
-     color: #777777;
-     font-size: 14px;
-     line-height: 1.55em;
- }
-
-.services__item:last-child{
-    float: right;
- }
-
-.services__item:nth-child(2){
-    margin-left: 60px;
- }
-
-#services{
-    padding-bottom: 120px;
+    padding-top: 166px;
+    padding-bottom: 180px;
 }
 
-#portfolio{
-     background: #f7f7f7;
-     padding-bottom: 120px;
- }
+.section-title{
 
-.works{
-     margin-top: 50px;
- }
-
-.works img{
-     float: left;
- }
-
-.works img:nth-child(2){
-    margin-left: 29px;
 }
 
-.works img:last-child{
-     float: right;
- }
-
-#about{
-    padding-bottom: 120px;
+.section-title__intro{
+    font-family: 'Jaapokkisubtract', sans-serif;
+    color: #a8a8e4;
+    font-size: 23px;
+    margin: 0;
 }
 
-.about{
-    margin-top: 50px;
+.section-title__title{
+    font-size: 85px;
+    margin-left: 50px;
 }
 
-.about__item{
-    margin-top: 1.2in;
+.section-title__title:after{
+    content: '';
+    display: inline-block;
+    background: #1e1fec;
+    width: 29px;
+    height: 5px;
+    margin-bottom: -15px;
 }
 
-.about__item__textl{
-    text-align: right;
-    float: left;
-    width: 323px;
-    margin-right: 0.5in;
-
-    
+.service{
+    display: flex;
+    justify-content: space-between;
+    margin-top: 120px;
 }
 
-.about__item__textr{
-    text-align: left;
-    float: right;
-    width: 323px;
-    margin-left: 0.5in;
-
-    
-}
-
-.about__item p{
-    color: #777777;
-    font-size: 16px;
-    margin-top: 5px;
- }
-
-.about img{
+.service__item{
+    width: 20%;
+    border: 4px solid #0001c5;
     display: block;
-    margin-left: 40%;
-    margin-right: auto;
+    padding-left: 53px;
+    padding-top: 60px;
+    padding-bottom: 120px;
+    position: relative;
+    transition: all 0.3s ease;
 }
-.footer p{
-    color: #777777;
-    font-size: 16px;
-    margin-top: 5px;
+
+.service__icon{
+    font-size: 48px;
+    margin-bottom: 45px;
+    display: block;
+}
+
+.service__title{
+    font-size: 26px;
+}
+
+.service__more{
+    position: absolute;
+    width: 44px;
+    height: 45px;
+    background: #0001c5;
+    color: #fff;
+    display: block;
     text-align: center;
+    cursor: pointer;
+    right:0;
+    bottom: 0;
 }
+
+.service__index{
+    font-family: 'Jaapokkisubtract', sans-serif;
+    position: absolute;
+    font-size: 23px;
+    color: #a8a8e4;
+    left: -55px;
+    top: 30px;
+}
+
+.service__item:hover{
+    background: #0001c5;
+    color: #fff;
+    box-shadow: 12px 12px 65px rgba(0,1,197,0.45)
+}
+
 .footer{
-    margin-bottom: 1.1in;
+    background: #ededf8;
+    padding: 160px 0;
+}
+
+.credits{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.credits__logo{
+    background: #0001c5;
+    color: #fff;
+    position: relative;
+    top: auto;
+}
+
+.credits__btn{
+    color: #0001c5;
+    border: 3px solid #0001c5;
+    font-size: 17px;
+    padding: 13px 0;
+    width: 172px;
+}
+
+.credits__up{
+    text-decoration: none;
 }
